Добавлен драйвер JDBC для СУБД PostgreSQL